project is finished

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <div>
+        <header>
             <span>
                 <a href="gallery.html">Gallery</a>
                 <br>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
             </span>
-        </div>
+        </header>
         <div>
             <span>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -50,13 +50,19 @@
                             eveniet
                             error ab repudiandae incidunt rerum tempora
                             recusandae
-                            similique.</p>
+                            similique.
+                        </p>
                     </span>
                 </div>
             </div>
         </div>
         <footer>
-            <span> </span>
+            <div> 
+                <span> Gallery</span>
+                <span>Contact</span>
+                <span>About</span>
+                <span>Home</span> 
+            </div>
         </footer>
     </body>
-</html>
+</html> 
